fix spacing homepage

--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -2398,6 +2398,10 @@ footer {
 
 
 @media (max-width: 780px) {
+  #home {
+    padding: 1em;
+    margin-top: 10em;
+  }
   .tagline {
     display: none !important;
   }
